# TrainUsacoCpp

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  README.md  generate_template.py  lint.sh  pyproject.toml  std_includes.py
chapter1/section2/: README.md
chapter1/section2/broken_necklace/: beads.cpp
chapter1/section2/friday_the_thirteenth/: friday.cpp
chapter1/section2/greedy_gift_givers/: gift1.cpp
chapter1/section2/submitting_solutions/: test.cpp
chapter1/section2/your_ride_is_here/: ride.cpp
chapter1/section3/: README.md
chapter1/section3/dual_palindromes/: dualpal.cpp
chapter1/section3/milking_cows/: milk2.cpp
chapter1/section3/name_that_number/: namenum.cpp
chapter1/section3/palindromic_squares/: palsquare.cpp
chapter1/section3/transformations/: transform.cpp
chapter1/section4/: README.md
chapter1/section4/barn_repair/: barn1.cpp
chapter1/section4/combination_lock/: combo.cpp
chapter1/section4/mixing_milk/: milk.cpp
chapter1/section4/prime_cryptarithm/: crypt1.cpp
chapter1/section4/ski_course_design/: skidesign.cpp
chapter1/section4/wormholes/: sample_input_output.txt  wormhole.cpp
chapter1/section5/: README.md
chapter1/section5/arithmetic_progressions/: ariprog.cpp
chapter1/section5/mothers_milk/: milk3.cpp
chapter1/section6/: README.md
chapter1/section6/number_triangles/: numtri.cpp
chapter6/section2/: README.md
chapter6/section2/packing_rectangles/: packrec.cpp
